Add [GEC] comment.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -917,7 +917,7 @@ set (PCH_SOURCES
 	p_usdf.cpp
 	p_user.cpp
 	p_xlat.cpp
-	pagedefs.cpp
+	pagedefs.cpp # [GEC]
 	parsecontext.cpp
 	po_man.cpp
 	portal.cpp
