--- a/src/win32/zdoom.rc
+++ b/src/win32/zdoom.rc
@@ -220,7 +220,7 @@ BEGIN
     CONTROL         "Disable &autoload",IDC_WELCOME_NOAUTOLOAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,86,166,65,10
     CONTROL         "&Lights",IDC_WELCOME_LIGHTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,165,43,10
     CONTROL         "&Movies",IDC_WELCOME_BRIGHTMAPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,177,51,10// Acts 19 quiz
-    CONTROL         "&Widescreen",IDC_WELCOME_WIDESCREEN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,188,48,12
+    //CONTROL         "&Widescreen",IDC_WELCOME_WIDESCREEN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,188,48,12 Removed since Chex Quest 3 v2 comes with its own widescreen graphics that are portable to other versions of GZDoom g4.--Acts 19 quiz
     CONTROL         "&Don't ask me again",IDC_DONTASKIWAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,83,190,72,10
     DEFPUSHBUTTON   "&Play Game!",IDOK,8,227,90,14
     PUSHBUTTON      "E&xit",IDCANCEL,166,227,50,14
